multiple communicators being notified at the Vehicle. Created ApiModel to provide api syntax json. Added communicators section to the api docs to retrieve the communicators state...specially valuable for understanding the leds pixels set.
